A bunch of style adjustments and additions. Working on database landing page, but also fixes such as setting text-overflow to ellipsis for file names in documents list so things look okay on small screens.

--- a/website/assets/sass/_interactives.scss
+++ b/website/assets/sass/_interactives.scss
@@ -24,7 +24,10 @@ input.primary {
     padding: 8px 4px 8px 8px;
 }
 a.button {
+    display: inline-block;
     text-decoration: none;
+    text-align: center;
+    padding: 8px;
 }
 fieldset {
     border: none;
