--- a/website/assets/sass/_variables.scss
+++ b/website/assets/sass/_variables.scss
@@ -22,6 +22,7 @@ $mid-hed-size: rem(22);
 $mid-text-size: rem($base-font-size);
 $section-hed-size: rem(26);
 $minor-text-size: rem(16);
+$compact-text-size: rem(12);
 $nav-text-size: $minor-text-size;
 $base-line-height: 1.45em;
 $sans-font-family: Lato, $helvetica;
